force-app/main/default/objects/NEP_SensorReading__c/NEP_SensorReading__c.object-meta.xml
<CustomObject>
    <label>NEP Sensor Reading</label>
    <pluralLabel>NEP Sensor Readings</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>NEP Sensor Reading Name</label>
        <displayFormat>NEP-R-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>