force-app/main/default/objects/NEP_SensorReading__c/fields/Applied_Model__c.field-meta.xml
<CustomField>
    <fullName>Applied_Model__c</fullName>
    <label>Applied Model</label>
    <description>NEP_RiskThreshold_Config__mdt DeveloperName used at scoring time (point-in-time stamp; not re-derived if config changes later).</description>
    <type>Text</type>
    <length>40</length>
</CustomField>