force-app/main/default/objects/NEP_SensorReading__c/fields/Applied_Temp_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Applied_Temp_Threshold__c</fullName>
    <label>Applied Temp Threshold</label>
    <description>Temp_Threshold_C__c read from NEP_RiskThreshold_Config__mdt at scoring time (point-in-time stamp).</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>