force-app/main/default/objects/NEP_SensorReading__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>Error Code</label>
    <description>Vendor-supplied error/fault code, captured for reference only. Never used in scoring.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>