force-app/main/default/objects/NEP_SensorReading__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <label>Escalated</label>
    <description>True once a Field Response Queue Case has been created for this reading. Guards against duplicate Cases on replay/reprocessing.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>