force-app/main/default/objects/NEP_SensorReading__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <description>Idempotent upsert anchor supplied by the upstream integration (recommended composition: TurbineId + Reading_Timestamp). Never generated or altered by this automation.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>