force-app/main/default/objects/NEP_SensorReading__c/fields/Is_Unmatched__c.field-meta.xml
<CustomField>
    <fullName>Is_Unmatched__c</fullName>
    <label>Is Unmatched</label>
    <description>True when TurbineId__c could not be resolved to exactly one Asset (no match or ambiguous match).</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>