force-app/main/default/objects/NEP_SensorReading__c/fields/Plain_Language_Summary__c.field-meta.xml
<CustomField>
    <fullName>Plain_Language_Summary__c</fullName>
    <label>Plain Language Summary</label>
    <description>Deterministic plain-language explanation of a High/Critical reading. Never populated for Normal/Medium. Never generated by a generative-AI or LLM service.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>