force-app/main/default/objects/NEP_SensorReading__c/fields/Reading_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Reading_Timestamp__c</fullName>
    <label>Reading Timestamp</label>
    <description>Point in time the sensor reading was captured by the turbine, as sent by the upstream integration.</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>