force-app/main/default/objects/NEP_SensorReading__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>Severity determined by NEPRiskScoringService against the applicable NEP_RiskThreshold_Config__mdt row. Set by automation only.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>