force-app/main/default/objects/NEP_SensorReading__c/fields/Temperature_C__c.field-meta.xml
<CustomField>
    <fullName>Temperature_C__c</fullName>
    <label>Temperature (C)</label>
    <description>Raw temperature reading in Celsius, as sent by the upstream integration.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>