force-app/main/default/objects/NEP_SensorReading__c/fields/Turbine__c.field-meta.xml
<CustomField>
    <fullName>Turbine__c</fullName>
    <label>Turbine</label>
    <description>Matched turbine Asset, resolved by matching TurbineId__c against Asset.ExternalIdentifier. Null when unmatched or ambiguous.</description>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipName>NEP_Sensor_Readings</relationshipName>
    <relationshipLabel>NEP Sensor Readings</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>