force-app/main/default/objects/NEP_SensorReading__c/fields/TurbineId__c.field-meta.xml
<CustomField>
    <fullName>TurbineId__c</fullName>
    <label>Turbine Id (Raw)</label>
    <description>Raw vendor turbine identifier as sent by the upstream integration. Retained even when the reading is unmatched.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>