force-app/main/default/objects/NEP_SensorReading__c/fields/Vibration_Hz__c.field-meta.xml
<CustomField>
    <fullName>Vibration_Hz__c</fullName>
    <label>Vibration (Hz)</label>
    <description>Raw vibration reading in Hz, as sent by the upstream integration.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>